# beam-rs-webrtc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/beam-common/: Cargo.toml
crates/beam-common/src/: lib.rs
crates/beam-common/src/core/: transfer.rs
crates/beam-common/src/tui/: mod.rs
crates/beam-rs-tor/: Cargo.toml
crates/beam-rs-tor/src/: main.rs
crates/beam-rs-tor/src/onion/: receiver.rs  sender.rs
crates/beam-rs-webrtc/src/: main.rs
crates/beam-rs-webrtc/src/signaling/: nostr.rs  offline.rs
crates/beam-rs-webrtc/src/webrtc/: offline_receiver.rs  receiver.rs  sender.rs
crates/beam-rs/src/: main.rs
crates/beam-rs/src/iroh/: common.rs  receiver.rs  sender.rs
crates/wormhole-rs/: Cargo.toml
crates/wormhole-rs/src/iroh/: common.rs  receiver.rs
docs/: ARCHITECTURE.md  ROADMAP.md  USE_CASES.md
src/: lib.rs  main.rs
src/core/: folder.rs  mod.rs  resume.rs  xfer.rs
src/signaling/: mod.rs  nostr_protocol.rs  offline.rs
src/ui/: mod.rs
src/webrtc/: receiver.rs  sender.rs
tests/: transfer_test.rs
