[package]
name = "beam-rs-tor"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "beam-rs-tor"
path = "src/main.rs"

[dependencies]
# Common library
beam-common = { path = "../beam-common", features = ["tui"] }

# Core dependencies (workspace)
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }

# Crate-specific dependencies
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tor/Onion transport
arti-client = { version = "0.43", features = ["onion-service-service", "onion-service-client", "tokio", "static-sqlite"] }
tor-hsservice = "0.43"
tor-cell = "0.43"
safelog = "0.8"
# rusqlite is not used directly; SQLite (used by tor-dirmgr for the directory
# cache) is statically bundled via arti-client's "static-sqlite" feature above.
